--- a/Kevyn_Aiden_MainEvidence1/Packages/manifest.json
+++ b/Kevyn_Aiden_MainEvidence1/Packages/manifest.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "com.unity.inputsystem": "1.6.3",
     "com.unity.probuilder": "5.1.1",
+    "com.unity.render-pipelines.high-definition": "14.0.8",
+    "com.unity.shadergraph": "14.0.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
